<resources>
    <string name="app_name">FutureBank</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="pin">Pin</string>
    <string name="titlu_linkare">Introduceti mai jos datele dumneavoastra de la contul bancar, pentru a linka aplicatia la datele dumneavoastra</string>
    <string name="linkare">Linkeaza</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Acasa</string>
    <string name="carduri">Carduri</string>
    <string name="cheltuieli">Cheltuieli</string>
    <string name="setari">Setari</string>
    <string name="iesi">Iesi din cont</string>
    <string name="nume_utilizator">Nume:</string>
    <string name="textview">TextView</string>
    <string name="sold">Sold:</string>
    <string name="Eveniment">Urmatorul eveniment financiar:</string>
    <string name="tranzactii">Tranzactii</string>
    <string name="curs_valutar">Curs Valutar</string>
    <string name="AUD">AUD</string>
    <string name="Adauga_Eveniment">Adauga un eveniment financiar</string>
    <string name="Selecteaza_zi">Selecteaza data evenimentului</string>
    <string name="apasa">Apasa aici</string>
    <string name="Selecteaza_timp">Selecteaza momentul evenimentului</string>
    <string name="introdu_numele_ev">Numele evenimentului</string>
    <string name="saptamanal">Saptamanal</string>
    <string name="lunar">Lunar</string>
    <string name="odata">O singura data</string>
    <string name="selecteaza">Selectati frecventa evenimentului</string>
    <string name="submit">Salveaza evenimentul</string>
    <string name="selecteaza_tara">Selecteaza tara</string>
    <string name="ex_tara">Ex: Romania</string>
    <string name="selecteaza_varsta">Introdu varsta</string>
    <string name="ex_varsta">Ex: 21</string>
    <string name="adauga_preferinta">Adauga o preferinta</string>
    <string name="ex_preferinta">Ex: Sportul</string>
    <string name="salveaza_setarile">Salveaza setarile</string>
    <string name="nu_exista">Nu exista evenimente financiare apropiate</string>
    <string-array name="options">
        <item>Sport</item>
        <item>Film</item>
        <item>Muzica</item>
        <item>Calatorie</item>
        <item>Jocuri</item>
    </string-array>
</resources>
