<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_exchange"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/curs_valutar" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/tranzactii" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_date_range"
            android:title="@string/Adauga_Eveniment" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setari" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/iesi"
            />

    </group>


</menu>
