<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/Nume_hf"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            android:text="@string/nume_utilizator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nume_dreapta_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/Nume_hf"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sold_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/sold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Nume_hf" />

        <TextView
            android:id="@+id/sold_dreapta_hf"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/sold_hf"
            app:layout_constraintTop_toBottomOf="@+id/Nume_hf" />

        <TextView
            android:id="@+id/eveniment_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/Eveniment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sold_hf" />

        <TextView
            android:id="@+id/eveniment_dreapta_hf"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/eveniment_hf"
            app:layout_constraintTop_toBottomOf="@+id/sold_hf" />

    </android.support.constraint.ConstraintLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Nume_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/nume_utilizator" />

        <TextView
            android:id="@+id/nume_dreapta_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_toEndOf="@+id/Nume_hf"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sold_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Nume_hf"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/sold" />

        <TextView
            android:id="@+id/sold_dreapta_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nume_dreapta_hf"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/sold_hf"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/eveniment_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sold_hf"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/Eveniment" />

        <TextView
            android:id="@+id/eveniment_dreapta_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sold_dreapta_hf"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/eveniment_hf"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>
</ScrollView>